--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <%= link_to 'categories', categories_path %> | <%= link_to 'projects', projects_path %> | <%= link_to 'milestones', milestones_path %> | <%= link_to 'tasks', tasks_path %> <br />
+    <hr />
+
 <%= yield %>
 
 </body>
